--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -18,18 +18,32 @@
     <item row="0" column="0" colspan="2">
      <widget class="EmulatorView" name="emulatorView"/>
     </item>
+    <item row="0" column="2" rowspan="2">
+     <widget class="QCodeEditor" name="codeEditor"/>
+    </item>
+    <item row="1" column="0" colspan="2">
+     <widget class="QTextBrowser" name="textBrowser"/>
+    </item>
+    <item row="2" column="2">
+     <widget class="QPushButton" name="nextButton">
+      <property name="text">
+       <string>Next</string>
+      </property>
+     </widget>
+    </item>
     <item row="2" column="0">
-     <widget class="QPushButton" name="pushButton">
+     <widget class="QPushButton" name="enterButton">
       <property name="text">
        <string>Enter</string>
       </property>
      </widget>
     </item>
-    <item row="0" column="2" rowspan="2">
-     <widget class="QCodeEditor" name="textEdit"/>
-    </item>
-    <item row="1" column="0" colspan="2">
-     <widget class="QTextBrowser" name="textBrowser"/>
+    <item row="2" column="1">
+     <widget class="QPushButton" name="clearButton">
+      <property name="text">
+       <string>Clear</string>
+      </property>
+     </widget>
     </item>
    </layout>
   </widget>
